# damspy-rpicontrol

./: AGENTS.md  Makefile  README.md  pyproject.toml
docs/implementation/: external_interfaces.md  implementation_strategy.md  liveplan.md
docs/implementation/promptlibrary/: 1.4_create_implementation_strategy.md  2.1_create_first_code_pass.md
docs/setup/: short_description.md
reference/: rxcc_hid_command_guide_v0.1.md  tx_rx_command_guide_v0.1.md
src/damspy_rpicontrol/: __init__.py  __main__.py  healthcheck.py  hendrix_device.py  main.py  models.py  rxcc_device.py  start_rf_ch0.py  start_rf_ch80.py
src/damspy_rpicontrol/templates/: index.html  rx.html  rxcc.html  test_command.html  tx.html  wireless_pro_rx.html
tests/: smoke_test.sh  test_app.py  test_healthcheck.py  test_hendrix_device.py  test_models.py  test_rxcc_device.py
