[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "damspy-rpicontrol"
version = "0.1.0"
description = "FastAPI control service for a Raspberry Pi-hosted RODE RXCC."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "hidapi>=0.14,<1.0",
    "pydantic>=2.6,<3.0",
    "uvicorn>=0.29,<1.0",
]

[project.scripts]
damspy-rpicontrol = "damspy_rpicontrol.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
damspy_rpicontrol = ["templates/*.html"]
